better explantation of the route order of Heaven.pm

--- a/examples/template/etc/bloonix/webapp/nginx.conf
+++ b/examples/template/etc/bloonix/webapp/nginx.conf
@@ -1,30 +1,30 @@
 server {
     listen 443;
-    server_name webapp;
+    server_name @@NAME@@;
 
-    access_log /var/log/nginx/bloonix-webapp.access.log anonym;
-    error_log /var/log/nginx/bloonix-webapp.error.log;
+    access_log /var/log/nginx/bloonix-@@NAME@@.access.log anonym;
+    error_log /var/log/nginx/bloonix-@@NAME@@.error.log;
 
     location ~ /public {
-        root /srv/bloonix/webapp;
+        root /srv/bloonix/@@NAME@@;
     }
 
     location /favicon.ico {
-        root /srv/bloonix/webapp/public/img;
+        root /srv/bloonix/@@NAME@@/public/img;
     }
 
     location /robots.txt {
-        root /srv/bloonix/webapp/public/txt;
+        root /srv/bloonix/@@NAME@@/public/txt;
     }
 
     location /sitemap.xml {
-        root /srv/bloonix/webapp/public/xml;
+        root /srv/bloonix/@@NAME@@/public/xml;
     }
 
     location / {
         expires off;
         include /etc/nginx/fastcgi_params;
-        root /srv/bloonix/webapp/public;
+        root /srv/bloonix/@@NAME@@/public;
         fastcgi_pass 127.0.0.1:9011;
     }
 
