--- a/examples/template/etc/init/bloonix-webapp.service.in
+++ b/examples/template/etc/init/bloonix-webapp.service.in
@@ -4,9 +4,9 @@ After=network.target
 
 [Service]
 Type=forking
-PIDFile=@@RUNDIR@@/bloonix/bloonix-webapp.pid
+PIDFile=@@RUNDIR@@/bloonix/bloonix-@@NAME@@.pid
 ExecStartPre=@@USRLIBDIR@@/bloonix/bin/bloonix-pre-start @@CACHEDIR@@/bloonix @@LIBDIR@@/bloonix @@LOGDIR@@/bloonix @@RUNDIR@@/bloonix
-ExecStart=@@SRVDIR@@/bloonix/webapp/scripts/bloonix-webapp --pid-file @@RUNDIR@@/bloonix/bloonix-webapp.pid --config-file @@CONFDIR@@/bloonix/webapp/main.conf
+ExecStart=@@SRVDIR@@/bloonix/@@NAME@@/scripts/bloonix-@@NAME@@ --pid-file @@RUNDIR@@/bloonix/bloonix-@@NAME@@.pid --config-file @@CONFDIR@@/bloonix/@@NAME@@/main.conf
 ExecReload=/bin/kill -1 $MAINPID
 ExecStop=/bin/kill -15 $MAINPID
 PrivateTmp=true
