--- a/examples/template/etc/bloonix/webapp/main.conf
+++ b/examples/template/etc/bloonix/webapp/main.conf
@@ -1,5 +1,5 @@
 heaven {
-    base /srv/bloonix/webapp/lib
+    base /srv/bloonix/@@NAME@@/lib
     model Database, REST
     view Template, JSON
 }
