--- a/examples/template/etc/init/bloonix-webapp.in
+++ b/examples/template/etc/init/bloonix-webapp.in
@@ -2,20 +2,20 @@
 
 # Red Hat style
 # chkconfig: 2345 99 10
-# description: bloonix webapp
+# description: bloonix @@NAME@@
 
 # Debian style
 ### BEGIN INIT INFO
-# Provides:          bloonix-webapp
+# Provides:          bloonix-@@NAME@@
 # Required-Start:    $network $syslog $all
 # Required-Stop:     $syslog
 # Default-Start:     2 3 4 5
 # Default-Stop:      0 1 6
-# Short-Description: Start and stop the bloonix-webapp daemon.
-# Description:       bloonix-webapp is the web application based on the Bloonix framework.
+# Short-Description: Start and stop the bloonix-@@NAME@@ daemon.
+# Description:       bloonix-@@NAME@@ is the web application based on the Bloonix framework.
 ### END INIT INFO
 
 WEBAPP=yes
 . @@USRLIBDIR@@/bloonix/bin/bloonix-init-source
-CHECK_DIRS="$CACHEDIR $LIBDIR/webapp $LOGDIR $RUNDIR"
+CHECK_DIRS="$CACHEDIR $LIBDIR/@@NAME@@ $LOGDIR $RUNDIR"
 __run
