kicked "anonym" from nginx config

--- a/examples/template/etc/bloonix/webapp/nginx.conf
+++ b/examples/template/etc/bloonix/webapp/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 443;
     server_name @@NAME@@;
 
-    access_log /var/log/nginx/bloonix-@@NAME@@.access.log anonym;
+    access_log /var/log/nginx/bloonix-@@NAME@@.access.log;
     error_log /var/log/nginx/bloonix-@@NAME@@.error.log;
 
     location ~ /public {
